all: update page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
-Hello World
+<html>
+<head>
+  <title>Nikita Tomilov</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+<div id="leftbar">
+  <p>
+  <h3>Contacts</h3>
+  <ul>
+    <li><a href="mailto:programmer174@icloud.com">E-mail</a></li>
+    <li><a href="https://www.linkedin.com/in/nikita-tomilov/">LinkedIn</a></li>
+    <li><a href="https://github.com/nikita-tomilov">GitHub</a></li>
+  </ul>
+  </p>
+  <p>
+  <h3>Programming languages</h3>
+  <ul>
+    <li>Kotlin</li>
+    <li>Java</li>
+    <li>Go</li>
+  </ul>
+  </p>
+<!--  Not currently looking for a job, but who knows...-->
+<!--  <p>-->
+<!--  <h3>Skills</h3>-->
+<!--  <ul>-->
+<!--    <li>Spring Framework</li>-->
+<!--    <li>REST</li>-->
+<!--    <li>Microservices</li>-->
+<!--    <li>Low-level programming</li>-->
+<!--    <li>SQL and NoSQL databases</li>-->
+<!--    <li>Bash</li>-->
+<!--    <li>Git</li>-->
+<!--    <li>Linux</li>-->
+<!--  </ul>-->
+<!--  </p>-->
+  <p>
+  <h3>Languages</h3>
+  <ul>
+    <li>Russian <i>- native</i></li>
+    <li>English <i>- C2/Profficiency</i></li>
+  </ul>
+  </p>
+  <p>
+  <h3>Awards</h3>
+  <ul class="bigul">
+    <li>
+      Bronze Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"<br>
+      nation level olympiad in <br>"Software Engineering"<br>
+      <i>season 2019-2020</i>
+    </li>
+    <li>
+      Bronze Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"
+      <br>nation level olympiad in <br>"IoT and Cyberphysical Systems"<br>
+      <i>season 2019-2020</i>
+    </li>
+    <li>
+      Silver Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"<br>
+      nation level olympiad in <br>"Software Engineering"<br>
+      <i>season 2018-2019</i></li>
+  </ul>
+  </p>
+</div>
+<div id="main">
+
+  <h1>Hello!</h1>
+  <p>This is a business&ndash;card&mdash;website of Nikita Tomilov, R&D software engineer at Siemens.</p>
+
+  <h2>Info</h2>
+  <p>
+    Backend developer within the Kotlin/Java stack.
+  </p>
+  <p>
+    Currently working on a turbine monitoring system and various
+    microservices around it.
+  </p>
+  <p>
+    Stack: Spring, Kotlin, Java.
+  </p>
+  <p>
+    Have university experience in JSF, JPA, EJB, Hibernate, JDBC,
+    JavaFX, Swing.
+  </p>
+  <p>
+    Used to work with SQL/NoSQL databases, including Oracle,
+    Postgres, Cassandra, Neo4j.
+  </p>
+  <p>
+    In love with low-level programming and Java optimizations.
+  </p>
+  <p>
+    Linux/Unix/Git heavy user.
+  </p>
+  <p>
+    Started using Go in pet project and university courseworks.
+  </p>
+
+  <h2>Education</h2>
+  <ul class="bigul">
+    <li>
+      Bachelor's Honor's degree<br>
+      2015&ndash;2019<br>
+      <a href="https://en.itmo.ru/">ITMO University</a>, Saint-Petersburg, Russia
+    </li>
+    <li>
+      <i>Incomplete </i>Master's degree<br>
+      2019&ndash;2021<br>
+      <a href="https://en.itmo.ru/">ITMO University</a>, Saint-Petersburg, Russia
+    </li>
+  </ul>
+
+<!--  Not currently looking for a job, but who knows...-->
+<!--  <h2>Experience</h2>-->
+<!--  <ul class="bigul">-->
+<!--    <li>-->
+<!--      <b>Siemens</b><br>-->
+<!--      Backend Software Engineer (Research and Development)<br>-->
+<!--      <i>May 2018&ndash;now</i><br>-->
+<!--      Development of a turbine monitoring system and various microservices around it-->
+<!--    </li>-->
+<!--    <li>-->
+<!--      <b>Emlid</b><br>-->
+<!--      Embedded Software Developer<br>-->
+<!--      <i>June 2017&ndash;May 2018</i><br>-->
+<!--      Embedded programming of a flight controller MCU firmware and Linux kernel modules-->
+<!--    </li>-->
+<!--  </ul>-->
+
+  <h2>Hobbies</h2>
+  <ul>
+    <li>Photography</li>
+    <li>Embedded programming</li>
+  </ul>
+
+  <h2>Favourite pet projects</h2>
+  <ul>
+    <li><a href="https://github.com/nikita-tomilov/hawk">hawk</a> - awk clone</li>
+    <li><a href="https://github.com/nikita-tomilov/vno-cli">vno</a> - version control system</li>
+    <li><a href="https://github.com/nikita-tomilov/summer">summer</a> - dependency injection for Go</li>
+    <li><a href="https://github.com/nikita-tomilov/katolk">katolk</a> - messaging app featuring JavaFX</li>
+  </ul>
+</div>
+</body>
+</html>
