add two more favourite projects

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
     <li><a href="https://github.com/nikita-tomilov/vno-cli">vno</a> - version control system</li>
     <li><a href="https://github.com/nikita-tomilov/summer">summer</a> - dependency injection for Go</li>
     <li><a href="https://github.com/nikita-tomilov/katolk">katolk</a> - messaging app featuring JavaFX</li>
+    <li><a href="https://github.com/nikita-tomilov/marking-helper">marking-helper</a> - a Flask-based Python app to assist in dataset markups</li>
+    <li><a href="https://github.com/nikita-tomilov/VolumeRotaryEncoder">VolumeRotaryEncoder</a> - a hardware knobs to control media playback and for hotkeys</li>
   </ul>
 </div>
 </body>
