index.html: uncomment skills block

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
   </ul>
   </p>
 <!--  Not currently looking for a job, but who knows...-->
-<!--  <p>-->
-<!--  <h3>Skills</h3>-->
-<!--  <ul>-->
-<!--    <li>Spring Framework</li>-->
-<!--    <li>REST</li>-->
-<!--    <li>Microservices</li>-->
-<!--    <li>Low-level programming</li>-->
-<!--    <li>SQL and NoSQL databases</li>-->
-<!--    <li>Bash</li>-->
-<!--    <li>Git</li>-->
-<!--    <li>Linux</li>-->
-<!--  </ul>-->
-<!--  </p>-->
+  <p>
+  <h3>Skills</h3>
+  <ul>
+    <li>Spring Framework</li>
+    <li>REST</li>
+    <li>Microservices</li>
+    <li>Low-level programming</li>
+    <li>SQL and NoSQL databases</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>Linux</li>
+  </ul>
+  </p>
   <p>
   <h3>Languages</h3>
   <ul>
