index.html: update info about yaprofi

--- a/index.html
+++ b/index.html
@@ -48,17 +48,27 @@
   <h3>Awards</h3>
   <ul class="bigul">
     <li>
-      Bronze Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"<br>
+      🥇Gold Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"
+      <br>nation level olympiad in <br>"IoT and Cyberphysical Systems"<br>
+      <i>season 2020-2021</i>
+    </li>
+    <li>
+      🥉Bronze Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"<br>
+      nation level olympiad in <br>"Software Engineering"<br>
+      <i>season 2020-2021</i>
+    </li>
+    <li>
+      🥉Bronze Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"<br>
       nation level olympiad in <br>"Software Engineering"<br>
       <i>season 2019-2020</i>
     </li>
     <li>
-      Bronze Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"
+      🥉Bronze Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"
       <br>nation level olympiad in <br>"IoT and Cyberphysical Systems"<br>
       <i>season 2019-2020</i>
     </li>
     <li>
-      Silver Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"<br>
+      🥈Silver Medalist of "<a href="https://yandex.ru/profi/">I'm Professional</a>"<br>
       nation level olympiad in <br>"Software Engineering"<br>
       <i>season 2018-2019</i></li>
   </ul>
