index.html: add info about ielts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h3>Languages</h3>
   <ul>
     <li>Russian <i>- native</i></li>
-    <li>English <i>- C2/Profficiency</i></li>
+    <li>English <i>- C2/Profficiency<br>IELTS Academic 8-band score - July 2021</i></li>
   </ul>
   </p>
   <p>
