index.html: update info about education

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div id="main">
 
   <h1>Hello!</h1>
-  <p>This is a business&ndash;card&mdash;website of Nikita Tomilov, R&D software engineer at Siemens.</p>
+  <p>This is a business&ndash;card&ndash;website of Nikita Tomilov, R&D senior software engineer at Siemens.</p>
 
   <h2>Info</h2>
   <p>
@@ -111,13 +111,18 @@
   <h2>Education</h2>
   <ul class="bigul">
     <li>
-      Bachelor's Honor's degree<br>
-      2015&ndash;2019<br>
+      <i>Incomplete </i>PhD<br>
+      2021&ndash;present<br>
       <a href="https://en.itmo.ru/">ITMO University</a>, Saint-Petersburg, Russia
     </li>
     <li>
-      <i>Incomplete </i>Master's degree<br>
+      Master's Honor's degree<br>
       2019&ndash;2021<br>
+      <a href="https://en.itmo.ru/">ITMO University</a>, Saint-Petersburg, Russia
+    </li>
+    <li>
+      Bachelor's Honor's degree<br>
+      2015&ndash;2019<br>
       <a href="https://en.itmo.ru/">ITMO University</a>, Saint-Petersburg, Russia
     </li>
   </ul>
@@ -152,7 +157,7 @@
     <li><a href="https://github.com/nikita-tomilov/summer">summer</a> - dependency injection for Go</li>
     <li><a href="https://github.com/nikita-tomilov/katolk">katolk</a> - messaging app featuring JavaFX</li>
     <li><a href="https://github.com/nikita-tomilov/marking-helper">marking-helper</a> - a Flask-based Python app to assist in dataset markups</li>
-    <li><a href="https://github.com/nikita-tomilov/VolumeRotaryEncoder">VolumeRotaryEncoder</a> - a hardware knobs to control media playback and for hotkeys</li>
+    <li><a href="https://github.com/nikita-tomilov/VolumeRotaryEncoder">VolumeRotaryEncoder</a> - hardware knobs to control media playback and for hotkeys</li>
   </ul>
 </div>
 </body>
