--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <title>Nikita Tomilov</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="theme-color" content="#477187" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#032436" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
