all: add HDR photos

--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
     
       <h2>Hobbies</h2>
       <ul>
-        <li>Photography</li>
+        <li>
+          Photography<br>
+          <a href="hdr/index.html">Check out my (real) HDR photos</a>
+        </li>
         <li>Embedded programming</li>
       </ul>
     
